--- a/index.html
+++ b/index.html
@@ -111,20 +111,25 @@
   <div class="card" id="questionCard">
     <h1>Hey Gundus will you be my Valentine? 💖</h1>
     <div class="buttons">
-      <button id="yesBtn" onclick="sayYes()">YES 💘</button>
-      <button id="noBtn" onmouseover="moveNo()">NO 🙈</button>
+      <button id="yesBtn" onclick="sayYes()">YES 😽🦋</button>
+      <button id="noBtn" onmouseover="moveNo()">NO 😐</button>
     </div>
   </div>
 
   <!-- YES RESULT -->
   <div class="card hidden" id="yesCard">
-    <h1>You said YES 🥹💖</h1>
-    <p>This song is just for you.</p>
+    <h1>You said "YES" baby girl😉💞, smart choice di ✨</h1>
+    <p>This part was made especially for you 🥹✨</p>
 
-    <!-- Replace with your video -->
+    <!-- Replace with your video
     <video controls autoplay>
       <source src="love.mp4" type="video/mp4">
-    </video>
+    </video> -->
+    <video controls autoplay muted playsinline>
+  <source src="love.mp4" type="video/mp4">
+  Your browser does not support the video.
+</video>
+
 
     <p style="margin-top:10px;">— Built with ❤️ by your developer</p>
   </div>
@@ -164,3 +169,4 @@
 
 </body>
 </html>
+
