--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       border-radius: 20px;
       backdrop-filter: blur(10px);
       box-shadow: 0 20px 40px rgba(0,0,0,0.25);
-      max-width: 400px;
+      max-width: 700px;
       position: relative;
       z-index: 2;
     }
@@ -111,7 +111,7 @@
   <div class="card" id="questionCard">
     <h1>Hey Gundus will you be my Valentine? 💖</h1>
     <div class="buttons">
-      <button id="yesBtn" onclick="sayYes()">YES 😽🦋</button>
+      <button id="yesBtn" onclick="sayYes()">YES 💖</button>
       <button id="noBtn" onmouseover="moveNo()">NO 😐</button>
     </div>
   </div>
@@ -180,6 +180,7 @@ function sayYes() {
 
 </body>
 </html>
+
 
 
 
