--- a/index.html
+++ b/index.html
@@ -176,35 +176,64 @@
   <script>
     let heartInterval;
 
-    function sayYes() {
+    let heartInterval;
+
+// Start hearts floating during YES card
+function sayYes() {
   document.getElementById("questionCard").classList.add("hidden");
   document.getElementById("yesCard").classList.remove("hidden");
 
   const video = document.getElementById("loveVideo");
 
-  // Start video after short delay
+  // Start floating hearts immediately
+  startHearts();
+
+  // Play video after small delay
   setTimeout(() => {
     video.play().catch(() => {
       console.log("Autoplay blocked, user interaction needed");
     });
   }, 300);
-
-  // Start floating hearts during video
-  startHearts();
 }
 
-// Stop hearts and show celebration after video ends
+// Keep hearts floating continuously
+function startHearts() {
+  heartInterval = setInterval(() => {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerText = "❤️";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.fontSize = Math.random() * 15 + 18 + "px";
+    document.body.appendChild(heart);
+
+    setTimeout(() => heart.remove(), 5000);
+  }, 300);
+}
+
+const video = document.getElementById("loveVideo");
+
 video.addEventListener("ended", () => {
-  clearInterval(heartInterval); // stop generating new hearts
-  // Remove all remaining hearts immediately
-  document.querySelectorAll(".heart").forEach(h => h.remove());
-
-  // Show celebration overlay
   const celebration = document.getElementById("celebration");
-  celebration.classList.remove("hidden");
+  celebration.classList.remove("hidden"); // show overlay
 
-  startCelebration(); // start butterfly and heart emojis for celebration
+  // Add extra floating hearts + butterflies for celebration
+  for (let i = 0; i < 15; i++) {
+    createEmoji("❤️", "heart");
+    createEmoji("🦋", "butterfly");
+  }
 });
+
+// Function to create floating emojis (hearts + butterflies)
+function createEmoji(symbol, className) {
+  const el = document.createElement("div");
+  el.innerText = symbol;
+  el.className = className;
+  el.style.left = Math.random() * 100 + "vw";
+  el.style.animationDelay = Math.random() * 3 + "s";
+  document.body.appendChild(el);
+
+  setTimeout(() => el.remove(), 6000);
+}
 
 
     function moveNo() {
@@ -255,5 +284,6 @@ video.addEventListener("ended", () => {
 
 </body>
 </html>
+
 
 
