--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
       font-size: 22px;
       animation: floatUp 5s linear infinite;
       opacity: 0.8;
-      z-index: 1;
+      z-index: 10; /* higher than the video */
+      pointer-events: none;
     }
 
     @keyframes floatUp {
@@ -269,5 +270,6 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
