--- a/index.html
+++ b/index.html
@@ -231,8 +231,9 @@
     heart.style.fontSize = Math.random() * 20 + 15 + "px";
 
     document.body.appendChild(heart);
-
+    console.log("Heart created! ❤️");
     setTimeout(() => heart.remove(), 4000);
+    console.log("Heart removed! 🗑️");
   }, 300);
 }
 
@@ -291,6 +292,7 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
 
