--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   position: fixed; /* fixed ensures it floats above all content */
   bottom: 0;
   font-size: 20px;
-  animation: floatUp 4s linear forwards; /* forwards instead of infinite */
+  animation: floatUp 4s linear infinite; /* forwards instead of infinite */
   opacity: 0.8;
   z-index: 9999; /* very high, above video */
   pointer-events: none;
@@ -298,6 +298,7 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
 
