--- a/index.html
+++ b/index.html
@@ -105,8 +105,14 @@
     
 
     @keyframes floatUp {
-      from { transform: translateY(100vh); opacity: 1; }
-      to { transform: translateY(-10vh); opacity: 0; }
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-100vh) scale(1.5);
+        opacity: 0;
+      }
     }
 
     /* 🦋 Butterflies flying randomly */
@@ -298,6 +304,7 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
 
