--- a/index.html
+++ b/index.html
@@ -170,6 +170,37 @@
       font-size: 18px;
       opacity: 0.9;
     }
+
+
+    #celebration h2 {
+    width: 100%;
+    position: relative;
+    font-size: 4em;
+    letter-spacing: 15px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 0.70em;
+    color: #0E3742;
+    -webkit-box-reflect: below 1px linear-gradient(transparent, #000800);
+    outline: none;
+    animation: anime 5s linear infinite;
+  }
+
+  @keyframes anime {
+    0%,18%,20%,50.1%,60%,65.1%,80%,90.1%,92% {
+      color: #0E3742;
+      text-shadow: none;
+    }
+    18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100% {
+      color: #FFF;
+      text-shadow: 
+        0 0 10px #03BCF4, 
+        0 0 20px #03BCF4, 
+        0 0 40px #03BCF4, 
+        0 0 80px #03BCF4, 
+        0 0 160px #03BCF4;
+    }
+  }
   </style>
 </head>
 
@@ -197,8 +228,7 @@
 
   <!-- 🎉 Celebration -->
   <div id="celebration">
-    <h1>Happy Valentine’s Day 💖</h1>
-    <p>You just made this day extra special 🦋</p>
+    <h2 id="valentineGlow">Happy Valentines day ❤️</h2>
   </div>
 
   <script>
@@ -253,7 +283,9 @@
 
     video.addEventListener("ended", () => {
       const celebration = document.getElementById("celebration");
-      celebration.classList.add("show"); // fade-in overlay
+      document.getElementById("yesCard").classList.add("hidden"); // Show only the glowing text 
+      const celebration = document.getElementById("celebration"); 
+      celebration.classList.add("show");
 
       // Add extra floating hearts + butterflies for celebration
     for (let i = 0; i < 25; i++) {
@@ -304,6 +336,7 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
 
