--- a/index.html
+++ b/index.html
@@ -283,8 +283,7 @@
 
     video.addEventListener("ended", () => {
       const celebration = document.getElementById("celebration");
-      document.getElementById("yesCard").classList.add("hidden"); // Show only the glowing text 
-      const celebration = document.getElementById("celebration"); 
+     // document.getElementById("yesCard").classList.add("hidden"); // Show only the glowing text 
       celebration.classList.add("show");
 
       // Add extra floating hearts + butterflies for celebration
@@ -336,6 +335,7 @@ const butterflyInterval = setInterval(() => {
 
 </body>
 </html>
+
 
 
 
